<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">UserCenter</string>
    <string name="gome_account_title">Login / Register</string>
    <string name="gome_accout_summary">Login GOME account can enjoy more rights and interests</string>
    <string name="denied_required_permission">Permissions denied. You can change them in Settings &gt; Apps.</string>
    <string name="default_label">N/A</string>
    <string name="self_service">Self service</string>
    <string name="feedback">Feedback</string>
    <string name="user_policy">User Policy</string>
    <string name="service_hotline">Service hotline</string>
    <string name="experience_version_request">Apply for beta version</string>
    <string name="experience_version_title">Apply for beta version</string>
    <string name="experience_version_resultt">No available beta version</string>
    <string name="after_sale_service_station">Service centers</string>
    <string name="reservation_service">Repair service</string>
    <string name="service_policy">Service policy</string>
    <string name="usercenter_help">Guide</string>
    <string name="maintenance_progress">Service progress query</string>
    <string name="optimization_label">Performance optimization</string>
    <string name="sercurity_label">Safety tools</string>
    <string name="manager_label">Mobile management</string>
    <string name="boost">Slowdown</string>
    <string name="junk_clean">Clear trash</string>
    <string name="phone_clean">Deep cleanup</string>
    <string name="battery_saver">Battery</string>
    <string name="boot_up_boost">Acceleration</string>
    <string name="virus_clean">Anti-virus</string>
    <string name="network_control">Network management</string>
    <string name="privacy_permissions">Privacy protection</string>
    <string name="harassment_intercept">Blocklist</string>
    <string name="exam_phone">Diagnosis</string>
    <string name="data_backup">Data backup</string>
    <string name="data_usage">Data monitoring</string>
    <string name="network_connection">Network connection</string>
    <string name="notification_manage">Notification management</string>
    <string name="hotline_title">400-898-8666 GOME phone service hotline</string>
    <string name="hotline_summary">Business Hours  09:00-18:00</string>
    <string name="only_call_by_landline">Business Hours  9:00-18:00( Dial only )</string>
    <string name="experience_version_and_note">Application and notes</string>
    <string name="experience_version">Experience version</string>
    <string name="experience_version_introduce">Introductory text Introductory text Introductory text Introductory text</string>
    <string name="update_experience_version">Update notes</string>
    <string name="update_experience_version_operation">1. This upgrade will not delete your user data,
         but it is still recommended that you do a good data backup before upgrading.\n2. It will take about 20 minutes
         for the upgrade process. Please wait patiently after clicking the "upgrade" button. Do not press the power
         button or the volume button to avoid escalation.The phone will be restarted automatically during the upgrade.\n
        3. If you encounter any problems during your use, please visit the "user center" or call the official service
         hotline 400-898-8666 for support.</string>
    <string name="roll_back_old_version">How do I roll back to stable version?</string>
    <string name="roll_back_old_version_operation">Operation instructions Operation instructions Operation instructions</string>
    <string name="agree_disclaimer">Read and understand</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_unavailabled">Disclaimer is not available</string>
    <string name="request_experience">Apply</string>
    <string name="request_processing">Processing，please wait</string>
    <string name="request_experience_success">Applied</string>
    <string name="request_experience_failed">Not applied</string>
    <string name="load_more_available">More</string>
    <string name="on_loading">Loading</string>
    <string name="no_more_data">No more</string>
    <string name="all_feedbacks">FAQs</string>
    <string name="my_feedback">My feedback</string>
    <string name="user_agreement">User Agreement</string>
    <string name="ok">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="proceedTo">Go to</string>
    <string name="user_agreement_detail">1.  “User Center” requires access to the storage, location, Phone, and local account information permissions to provide you with GOME after-sales services (the storage and location permissions are only required if you select China).\n2.  During use, this app requires Internet access. The following information will also be collected and processed: \n&#160;&#160;&#160;&#160;&#8226;&#160;Device information, including IMEI, IMSI, MEID, SN, and model number.\n&#160;&#160;&#160;&#160;&#8226;&#160;The name, address, phone number, and email information you provided.\n&#160;&#160;&#160;&#160;You can exit the app to terminate information collection and uploading activities.\n3.  Using the Self service (China) in this app will launch the Phone Manager, GOME Cloud, and Backup features.</string>
    <string name="user_agreement_decription">By tapping \"Agree\", you will agree to the above terms, <xliff:g id="LINK_BEGIN_0">LINK_BEGIN</xliff:g>User Agreement<xliff:g id="LINK_END_1">LINK_END</xliff:g> and <xliff:g id="LINK_BEGIN_0">LINK_BEGIN</xliff:g>GOME Privacy Policy<xliff:g id="LINK_END_1">LINK_END</xliff:g>.</string>
    <string name="user_agreement_title">User Agreement</string>
    <string name="gome_privacy_policy_title">GOME Privacy Policy</string>
    <string name="user_center_help_title">Help</string>
    <string name="feedback_notify">Feedback</string>
    <string name="feedback_notify_server">Brief description*</string>
    <string name="feedback_issue_detail">Describe your problem, as well as steps to reproduce. No more than 500 words</string>
    <string name="feedback_user_contact">Phone number or email</string>
    <string name="contact_us">You can call the GOME store service hotline:</string>
    <string name="contact_us_tel">400&#8211;898&#8211;8666</string>
    <string name="feedback_submit">Submit</string>
    <string name="feedback_module">Category</string>
    <string name="mode1">Module 1</string>
    <string name="mode2">Module 2</string>
    <string name="mode3">Module 3</string>
    <string name="mode4">Module 4</string>
    <string name="string_wlan_service_title">If you\'e having trouble connecting to a WLAN network possible reasons may be:</string>
    <string name="string_wlan_service_tip1">1.WLAN is turned off. Go to Settings, turn on WLAN, select a network, and enter the password if prompted.</string>
    <string name="string_wlan_service_tip2">2.The WLAN psaaword has changed. Rrconnect to the netword and enter the new password.</string>
    <string name="string_wlan_service_tip3">3.If it\'s only your phone that\'s experiencing this issue, restart WLAN, or restart your phone and try again.</string>
    <string name="string_mobile_data_service_title">If you\'e having trouble connecting to the Internet, possible reasons may be:</string>
    <string name="string_mobile_data_service_tip1">1.Mobile data is turned off. Go to Settings and turn on your mobile data. if you are romaing, turn on data romaing(verifying potential romaing charges beforehand is highly recommended).</string>
    <string name="string_mobile_data_service_tip2">2.You do not have an Internet access sevice. Contact your Internet sevice provider to enable GPRS.</string>
    <string name="string_mobile_data_service_tip3">3.Your account has an outstanding balance.</string>
    <string name="string_mobile_data_service_tip4">4.A software conflict or error has occurred. Restart your phone and try again.</string>
    <string name="string_no_sim_card_found">No SIM card was detected. Please make sure there is an insert</string>
    <string name="alert_network_unavaiable">The network is unavailable or is in bad condition</string>
    <string name="dialog_title_no_network">Internet connection is not available, please check your network settings</string>
    <string name="txt_set_network">Set</string>
    <string name="txt_set_network_cancel">Cancel</string>
    <string name="self_network">Network connection</string>
    <string name="self_data_activity">Mobile network</string>
    <string name="self_wlan_activity">WLAN</string>
    <string name="to_setting">Settings</string>
    <string name="add_picture">Add picture</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_allow">Allow</string>
    <string name="dialog_forbidden">Forbid</string>
    <string name="dialog_login_alert_feedback_your_suggestion">Before submitting the feedback, you need to log in your GOME ID</string>
    <string name="dialog_login_alert_apply_for_experience">Please log in your GOME ID first</string>
    <string name="dialog_login_alert_apply_for_reservation">Before apply for an appointment, please log in your GOME account</string>
    <string name="dialog_message_cancel_reservation">Cancel this reservation?</string>
    <string name="toast_input_infomation_is_null">Please fill all your information</string>
    <string name="toast_input_infomation_correct_format">Please input information in correct format</string>
    <string name="toast_input_phone_or_email_correct_format">Please input information in correct format</string>
    <string name="telephone">Phone number</string>
    <string name="address">Address</string>
    <string name="maintenance_margin">Service range</string>
    <string name="business_hours">Business hours</string>
    <string name="reserve_maintenance">Repair Reservation</string>
    <string name="reserve_timepicker">Time</string>
    <string name="reserve_username_hint">Enter your name</string>
    <string name="reserve_mobile_number_hint">Enter phone number</string>
    <string name="card_title_reservation_number">Tracking number</string>
    <string name="card_title_reservation_time">Reserved time</string>
    <string name="card_title_reservation_station">Service center</string>
    <string name="card_title_model_number">Device</string>
    <string name="card_title_user_name">User name</string>
    <string name="card_title_mobile_number">Phone number</string>
    <string name="card_title_issue_description">Problem description</string>
    <string name="card_title_maintenance_number">Maintenance number</string>
    <string name="card_title_current_state">Current status</string>
    <string name="card_title_processing_time">Acceptance time</string>
    <string name="card_title_return_machine_time">Return time</string>
    <string name="card_title_money_amount">Cost</string>
    <string name="fold_card_view">Fold</string>
    <string name="user_name">Full name</string>
    <string name="reservation_service_type">Service type</string>
    <string name="mobile_number">Phone Number</string>
    <string name="arrival_time">Arrival time</string>
    <string name="choose_station">Service center</string>
    <string name="commit">Submit</string>
    <string name="next_step">Next</string>
    <string name="failure_issue">Problem description</string>
    <string name="default_summary_station">Select service center</string>
    <string name="default_summary_reservation_time">Date and time</string>
    <string name="default_summary_issue_description">Please fill in</string>
    <string name="default_summary_service_type">Choose option</string>
    <string name="default_summary_user_name">Enter your name</string>
    <string name="default_summary_mobile_number">Enter phone number</string>
    <string name="system_update">Update system</string>
</resources>