<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView android:id="@+id/scroll_view"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.gome.usercenter.view.ReservationListItem
                    android:background="@drawable/preference_background_selector"
                    android:id="@+id/choose_station"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/gome_list01_height"
                    android:gravity="center_vertical"
                    android:paddingRight="@dimen/gome_padding_size_14dp"
                    android:paddingLeft="@dimen/gome_padding_size_20dp"
                    app:title="@string/choose_station"
                    app:summary="@string/default_summary_station"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="@dimen/gome_padding_size_20dp"
                    android:background="#1F000000"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

                <com.gome.usercenter.view.ReservationListItem
                    android:background="@drawable/preference_background_selector"
                    android:id="@+id/arrival_time"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/gome_list01_height"
                    android:gravity="center_vertical"
                    android:paddingRight="@dimen/gome_padding_size_14dp"
                    android:paddingLeft="@dimen/gome_padding_size_20dp"
                    app:title="@string/arrival_time"
                    app:summary="@string/default_summary_reservation_time"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="@dimen/gome_padding_size_20dp"
                    android:background="#1F000000"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

                <com.gome.usercenter.view.ReservationListItem
                    android:background="@drawable/preference_background_selector"
                    android:id="@+id/failure_issue"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/gome_list01_height"
                    android:gravity="center_vertical"
                    android:paddingRight="@dimen/gome_padding_size_14dp"
                    android:paddingLeft="@dimen/gome_padding_size_20dp"
                    app:title="@string/failure_issue"
                    app:summary="@string/default_summary_issue_description"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="@dimen/gome_padding_size_20dp"
                    android:background="#1F000000"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

                <com.gome.usercenter.view.ReservationListItem
                    android:background="@drawable/preference_background_selector"
                    android:id="@+id/reservation_service_type"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/gome_list01_height"
                    android:gravity="center_vertical"
                    android:paddingRight="@dimen/gome_padding_size_14dp"
                    android:paddingLeft="@dimen/gome_padding_size_20dp"
                    app:title="@string/reservation_service_type"
                    app:summary="@string/default_summary_service_type"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="@dimen/gome_padding_size_20dp"
                    android:background="#1F000000"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>

            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:background="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button android:id="@+id/next_step"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gome_padding_size_40dp"
                android:layout_margin="@dimen/gome_padding_size_20dp"
                android:text="@string/next_step"
                android:textAppearance="@style/singlelist_text_appearance"/>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
