<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backgroundup"
    android:clipToPadding="true" >

    <RelativeLayout
        android:id="@+id/action_bar_layout"
        android:layout_width="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/ic_default_statusbar_hight_size"
        android:layout_marginLeft="@dimen/ic_default_actionbar_margin_left_size"
        android:layout_height="@dimen/ic_default_actionbar_hight_size">

        <ImageButton
            android:id="@+id/ps_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/gome_sys_icon_back"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/my_actionbar_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/ps_back_btn"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/ic_default_actionbar_margin_back_size"
            android:textColor="@color/ic_default_title_text_color"
            android:text="@string/experience_version_request"
            android:textSize="15sp"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gome_experience_background_height"
        android:paddingTop="@dimen/gome_padding_size_20dp"
        android:paddingRight="@dimen/gome_padding_size_20dp"
        android:paddingLeft="@dimen/gome_padding_size_20dp"
        android:paddingBottom="@dimen/gome_padding_size_60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:visibility="visible">

        <TextView android:id="@+id/empty_view"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout android:id="@+id/experience_version_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/gome_padding_size_20dp"
                android:layout_alignParentTop="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/gome_title_normal_size"
                    android:textColor="@color/gome_first_line_text_color"
                    android:text="@string/experience_version_and_note" />
                <TextView android:id="@+id/request_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/request_experience_failed"
                    android:textSize="@dimen/gome_title_normal_size"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <!--<ScrollView-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_below="@+id/experience_version_header"-->
                <!--android:layout_above="@+id/experience_version_footer"-->
                <!--android:scrollbars="vertical">-->
                <LinearLayout android:id="@+id/webview_parent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/experience_version_header"
                    android:layout_above="@+id/experience_version_footer"
                    android:orientation="vertical"/>
            <!--</ScrollView>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingTop="@dimen/gome_padding_size_5dp"
                    android:text="@string/experience_version"
                    android:textColor="@color/gome_first_line_text_color"
                    android:textSize="@dimen/gome_custom_text_size_13sp"/>

                <TextView
                    android:id="@+id/introduce_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/gome_padding_size_2dp"
                    android:textColor="@color/dark_foreground"
                    android:textSize="@dimen/gome_custom_text_size_13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/gome_padding_size_20dp"
                    android:text="@string/update_experience_version"
                    android:textColor="@color/gome_first_line_text_color"
                    android:textSize="@dimen/gome_custom_text_size_13sp"
                    />

                <TextView
                    android:id="@+id/update_experience_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/gome_padding_size_2dp"
                    android:text="@string/update_experience_version_operation"
                    android:textColor="@color/dark_foreground"
                    android:textSize="@dimen/gome_custom_text_size_13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/gome_padding_size_20dp"
                    android:text="@string/roll_back_old_version"
                    android:textColor="@color/gome_first_line_text_color"
                    android:textSize="@dimen/gome_custom_text_size_13sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/roll_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="@dimen/gome_padding_size_2dp"
                    android:text="@string/roll_back_old_version_operation"
                    android:textColor="@color/dark_foreground"
                    android:textSize="@dimen/gome_custom_text_size_13sp"
                    android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/experience_version_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/experience_version_footer_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/gome_padding_size_10dp"
                    android:layout_marginBottom="@dimen/gome_padding_size_12dp"
                    android:layout_height="@dimen/gome_padding_size_20dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="start|center">
                    <CheckBox
                        android:id="@+id/agree_disclaimer_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:onClick="onClick"/>
                    <TextView
                        android:id="@+id/disclaimer"
                        android:text="@string/experience_version"
                        android:gravity="center_vertical"
                        android:textColor="@color/gome_first_line_text_color"
                        android:layout_marginLeft="@dimen/gome_padding_size_2.8dp"
                        android:layout_toRightOf="@+id/agree_disclaimer_checkbox"
                        android:textSize="@dimen/gome_custom_text_size_13sp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"/>
                </RelativeLayout>
                <LinearLayout
                    android:id="@+id/request_button_margin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/gome_padding_size_20dp"
                    android:orientation="vertical">
                </LinearLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/request_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:background="@drawable/custom_button_selector"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/gome_button_small_height"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/request_experience"
                        android:textColor="@color/button_select_color"
                        android:onClick="onClick"/>
                    <Button
                        android:id="@+id/update_button"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/gome_button_small_height"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/custom_button_selector"
                        android:onClick="onClick"
                        android:text="@string/system_update"
                        android:textColor="@color/button_select_color"
                        android:visibility="gone"/>
                </FrameLayout>
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/process_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/gome_padding_size_20dp"
        android:layout_marginBottom="@dimen/gome_padding_size_30dp"
        android:textColor="@color/gome_first_line_text_color"
        android:text="@string/request_processing"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/experience_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:padding="@dimen/gome_padding_size_20dp"
        android:textColor="@color/gome_first_line_text_color"
        android:text="@string/experience_version_resultt"
        android:visibility="invisible"/>
</RelativeLayout>
